G1CollectorPolicy::_rs_lengths_prediction is not initialized before use

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • gc
    • b89

        The field G1CollectorPolicy::_rs_lengths_prediction is not initialized before use. However, this is benign since the value will be set via G1CollectorPolicy::init before use. However, it should be initialized to zero anyway.

              Assignee:
              Erik Helin
              Reporter:
              Erik Helin
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: