8138971: G1CollectorPolicy::_rs_lengths_prediction is not initialized before use

Reviewed-by: mgerdin, jwilhelm